[gd_scene load_steps=8 format=3 uid="uid://cer0vluvqnvw8"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_4mdme"]
[ext_resource type="PackedScene" uid="uid://4mahlirpx7nk" path="res://Scenes/Main.tscn" id="1_etwsd"]
[ext_resource type="Script" path="res://Scripts/Classes/ExtraLife.gd" id="2_7v4v7"]
[ext_resource type="PackedScene" uid="uid://bticy1xo6tubk" path="res://Scenes/GameOver.tscn" id="2_dh1qo"]

[sub_resource type="Resource" id="Resource_51mgp"]
script = ExtResource("2_7v4v7")
score = 20000
got = false

[sub_resource type="Resource" id="Resource_d485b"]
script = ExtResource("2_7v4v7")
score = 80000
got = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdddf"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="Control" node_paths=PackedStringArray("score_label", "lives_label", "time_label", "main")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mdme")
extra_lives = Array[ExtResource("2_7v4v7")]([SubResource("Resource_51mgp"), SubResource("Resource_d485b")])
score_txt = "Score: "
lives_txt = "Lives: "
time_txt = "Time: "
lives = 3
time = 60
score_label = NodePath("GameStats/HBoxContainer/Score")
lives_label = NodePath("GameStats/HBoxContainer/Lives")
time_label = NodePath("GameStats/HBoxContainer/Time")
main = NodePath("SubViewportContainer/SubViewport/Main")
game_over = ExtResource("2_dh1qo")

[node name="GameStats" type="Panel" parent="."]
layout_mode = 0
offset_right = 608.0
offset_bottom = 32.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vdddf")

[node name="HBoxContainer" type="HBoxContainer" parent="GameStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Spacer" type="Control" parent="GameStats/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Score" type="Label" parent="GameStats/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1

[node name="Lives" type="Label" parent="GameStats/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="GameStats/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
offset_top = 32.0
offset_right = 608.0
offset_bottom = 640.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(608, 608)
render_target_update_mode = 4

[node name="Main" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_etwsd")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="add_score" from="SubViewportContainer/SubViewport/Main" to="." method="_on_add_score"]
[connection signal="add_time" from="SubViewportContainer/SubViewport/Main" to="." method="_on_add_time"]
[connection signal="lost_live" from="SubViewportContainer/SubViewport/Main" to="." method="_on_lost_live"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
